--- a/webapp/editor/index.html
+++ b/webapp/editor/index.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <title>Pixel Canvas!</title>
-    <script type="text/javascript" src="grid.js"></script>
+    <script type="text/javascript" src="grid.bc.js"></script>
   </head>
   <body>
           <div id="drawbox"></div>
